--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "winter-olympics-medals",
+	"name": "winter-olympics-watch-guide",
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
